--- a/public/personalWeb.css
+++ b/public/personalWeb.css
@@ -153,9 +153,28 @@
 }
 
 body {
-    padding-top: 3.5rem;
-    color: #656c6d;
-    background-color: rgba(17, 17, 17, 255);
+    padding-top: 6vh;
+    /* color: #656c6d; */
+    /* background-color: rgba(17, 17, 17, 255); */
+}
+
+#outerLayer{
+    background-color: #ffb400;
+    height: 85vh;
+    width: 80vw;
+    border-radius: 32px
+}
+
+#inlineLayer1{
+    box-sizing: border-box;
+    height: 100%;
+}
+
+#inlineLayer2{
+    box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
+    background-color: black;
 }
 
 button {
@@ -203,33 +222,114 @@ button {
 .detailBox4 {
     background-color: rgba(34, 34, 34, 255);
     color: aliceblue;
-    height: 40vh;
-    text-align: center;
+    box-sizing: border-box;
+    height: 100%;
     padding-top: 18vh;
     font-size: xx-large;
     font-weight: 1000;
     border: solid white 1px;
     border-radius: 0.5rem;
+    display: flex;
+    padding-left: 10vw;
 }
 
-img {
-    height: 90vh;
-    width: 24vw;
+.personalPicture img {
+    height: 30%;
+    width: 100%
+}
+
+.multi-text {
+    text-transform: uppercase;
 }
 
 .firstWord2,
 .firstWord3,
 .firstWord4 {
     color: rgba(114, 182, 38, 255);
+    height: 30vh;
+    width: 10vw;
+}
+
+.inlineBox {
+    display: flex;
+    overflow: hidden;
+    text-align: center;
 }
 
 .green {
     color: rgba(114, 182, 38, 255);
+    cursor: default;
+    opacity: 1;
+    animation: slideUp 0.5s ease forwards
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    /* 20% {
+        opacity: 1;
+        transform: translateY(-20px);
+    } */
+    40% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+
+    60% {
+        opacity: 1;
+        transform: translateY(30px);
+    }
+
+    /* 85% {
+        opacity: 1;
+        transform: translateY(20px);
+    } */
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
 
 .while {
     color: aliceblue;
+    cursor: default;
+    opacity: 1;
+    animation: slideDown 0.5s ease forwards
 }
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    /* 20% {
+        opacity: 1;
+        transform: translateY(-20px);
+    } */
+    40% {
+        opacity: 1;
+        transform: translateY(30px);
+    }
+
+    60% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+
+    /* 85% {
+        opacity: 1;
+        transform: translateY(20px);
+    } */
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
 
 dialog {
     position: absolute;
@@ -384,7 +484,8 @@ element::-webkit-scrollbar {
 .contactBox {
     background-color: black;
     border: solid 0.1vw gray;
-    height: 65vh;
+    height: 80%;
+    box-sizing: border-box;
 }
 
 .contactBoxTopic {
@@ -411,28 +512,10 @@ element::-webkit-scrollbar {
     margin-right: 1vh;
 }
 
-#facebook {
-    background-color: rgba(59, 89, 152, 255);
-    color: white;
-    padding-top: 1vh;
-}
-
-#twitter {
-    background-color: rgba(29, 161, 242, 255);
-    color: white;
-    padding-top: 1vh;
-}
-
-#whatsapp {
-    background-color: rgb(7, 160, 7);
-    color: white;
-    padding-top: 1vh;
-}
-
-#linkedin {
-    background-color: rgba(0, 119, 181, 255);
-    color: white;
-    padding-top: 1vh;
+.side{
+    box-sizing: border-box;
+    height: 80%;
+    background-color: black;
 }
 
 input {
@@ -466,4 +549,40 @@ input {
     background-color: transparent;
     top: 25vh;
     left: 15vw;
+}
+
+.boxZoneInAnimation {
+    cursor: default;
+    opacity: 0;
+    animation: zoneIn 1s ease forwards;
+}
+
+@keyframes zoneIn {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.boxZoneOutAnimation {
+    cursor: default;
+    opacity: 1;
+    animation: zoneOut 1s ease forwards;
+}
+
+@keyframes zoneOut {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
 }
